fixing general issues: text-shadow, white header alignment

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -7,8 +7,7 @@
 .about-intro {
 
 	h1 {
-		max-width: 720px;
-		text-shadow: 0 0 40px rgba(0, 0, 0, 0.15);
+		max-width: 725px;
 	}
 
 	div {
